# TalkrBot

./: .env.template  .gitignore  ENVIRONMENT_SETUP.md  GITHUB_DESCRIPTION.md  GITHUB_SHORT_DESCRIPTION.txt  README.md  load_env.sh  passwords.txt  remove_secret_example.txt  scan_secrets.sh  test_arm_integration.py  test_env.py  test_nav2_final.py  test_nav2_integration.py  test_ws_aac_node.py  verify_nav2_integration.sh
.github/workflows/: security-scan.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/behaviortree_cpp_v3/share/behaviortree_cpp_v3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/talkrbot_aac/lib/talkrbot_aac/: aac_node
install/talkrbot_aac/share/talkrbot_aac/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talkrbot_bt/share/talkrbot_bt/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talkrbot_bt_cpp/lib/talkrbot_bt_cpp/: bt_executor
install/talkrbot_bt_cpp/share/talkrbot_bt_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talkrbot_feedback/lib/talkrbot_feedback/: failure_handler_node  history_query_node  semantic_history_query_node  speech_node  task_history_manager  user_profile_manager
install/talkrbot_feedback/share/talkrbot_feedback/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talkrbot_launch/share/talkrbot_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/talkrbot_llm/lib/talkrbot_llm/: groot_planner_node  intent_refiner_node  llm_node  memory_node
install/talkrbot_llm/share/talkrbot_llm/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
talkrbot_aac/: package.xml  setup.cfg  setup.py
talkrbot_aac/talkrbot_aac/: aac_node.py
talkrbot_bt/: bring_object.xml  package.xml  setup.py
talkrbot_bt/resource/: talkrbot_bt
talkrbot_bt/talkrbot_bt/: bt_executor_node.py
talkrbot_bt_cpp/: CMakeLists.txt  package.xml
talkrbot_bt_cpp/resource/: talkrbot_bt_cpp
talkrbot_bt_cpp/src/: bt_executor.cpp
talkrbot_feedback/: package.xml  setup.cfg  setup.py
talkrbot_feedback/talkrbot_feedback/: failure_handler_node.py  semantic_history_query.py  task_history_manager.py
talkrbot_launch/: package.xml  setup.py
talkrbot_launch/launch/: demo_pipeline.launch.py
talkrbot_launch/resource/: talkrbot_launch
talkrbot_llm/: package.xml  setup.cfg  setup.py
talkrbot_llm/talkrbot_llm/: groot_planner_node.py  intent_refiner_node.py  llm_node.py  memory_node.py
talkrbot_msgs/: CMakeLists.txt  package.xml
talkrbot_msgs/msg/: AACInput.msg  ExecutionFeedback.msg  RefinedIntent.msg
talkrbot_nav/: package.xml  setup.cfg  setup.py
talkrbot_perception/: package.xml  setup.cfg  setup.py
talkrbot_planner/: setup.cfg  setup.py
talkrbot_planner/talkrbot_planner/: skill_executor_node.py  skill_executor_node_simple.py
(+182 files in other folders)
