<?xml version="1.0"?>
<package format="3">
  <name>talkrbot_bt</name>
  <version>0.0.0</version>
  <description>Behavior Tree executor for TalkrBot</description>

  <maintainer email="ved.06.soni@gmail.com">vedantso</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>talkrbot_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 