<?xml version="1.0"?>
<package format="3">
  <name>talkrbot_bt_cpp</name>
  <version>0.0.0</version>
  <description>BehaviorTree.CPP executor with ZMQ introspection for Groot</description>

  <maintainer email="ved.06.soni@gmail.com">vedantso</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 