<?xml version="1.0"?>
<package format="3">
  <name>talkrbot_launch</name>
  <version>0.0.0</version>
  <description>Unified launch for TalkrBot pipeline</description>

  <maintainer email="ved.06.soni@gmail.com">vedantso</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>talkrbot_aac</exec_depend>
  <exec_depend>talkrbot_llm</exec_depend>
  <exec_depend>talkrbot_planner</exec_depend>
  <exec_depend>talkrbot_feedback</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 